# Swampkore

./: .gitignore  CMakeLists.txt  IMPLEMENTATION_SUMMARY.md  KORE_SWAMP_README.md  QUICKSTART.md  README.md
.github/: copilot-instructions.md
.github/instructions/: *.instructions.md
Assets/: README.md
Source/: AudioEngine.cpp  AudioEngine.h  LoFiProcessor.cpp  LoFiProcessor.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  Sampler.cpp  Sampler.h  SwingProcessor.cpp  SwingProcessor.h  VoiceManager.cpp  VoiceManager.h  WavetableSynth.cpp  WavetableSynth.h
